# paseto-rs

./: Cargo.toml  README.md
paseto-bench/: Cargo.toml
paseto-bench/benches/: paseto_v4_local.rs  paseto_v4_public.rs
paseto-bench/src/: lib.rs
paseto-core/: Cargo.toml
paseto-core/src/: base64.rs  encodings.rs  key.rs  keyset.rs  lib.rs  pae.rs  tokens.rs  validation.rs  version.rs
paseto-core/src/key/: id.rs  mod.rs  pie_wrap.rs  pke.rs  plaintext.rs  pw_wrap.rs
paseto-core/src/paserk/: id.rs  keyset.rs  mod.rs  pie_wrap.rs  pke.rs  plaintext.rs  pw_wrap.rs
paseto-json/: Cargo.toml
paseto-json/src/: lib.rs
paseto-test/: Cargo.toml
paseto-test/src/: lib.rs
paseto-test/tests/: key_id.rs  key_pbkw.rs  key_seal.rs  key_text.rs  key_wrap.rs  paseto.rs
paseto-test/tests/vectors/: k1.pid.json  k1.public.json  k1.secret-pw.json  k1.secret-wrap.pie.json  k1.secret.json  k1.sid.json  k2.pid.json  k2.public.json  k2.secret.json  k2.sid.json  k3.seal.json  v1.json  v2.json
paseto-v1/: Cargo.toml  README.md
paseto-v1/src/: lib.rs
paseto-v1/src/core/: local.rs  mod.rs  pie_wrap.rs  pke.rs  public.rs  pw_wrap.rs
paseto-v2/: Cargo.toml  README.md
paseto-v2/src/: lib.rs
paseto-v2/src/core/: local.rs  mod.rs  pie_wrap.rs  pke.rs  public.rs  pw_wrap.rs
paseto-v3/: Cargo.toml  README.md
paseto-v3-aws-lc/: Cargo.toml  README.md
paseto-v3-aws-lc/src/: lib.rs
paseto-v3-aws-lc/src/core/: local.rs  mod.rs  pie_wrap.rs  pke.rs  public.rs  pw_wrap.rs
paseto-v3-aws-lc/src/lc/: mod.rs  ptr.rs
paseto-v3/src/: lib.rs  pae.rs
paseto-v3/src/core/: local.rs  mod.rs  pie_wrap.rs  pke.rs  public.rs  pw_wrap.rs
paseto-v3/src/lc/: mod.rs  ptr.rs
paseto-v3/tests/: paserk.rs  paseto.rs
paseto-v4/: Cargo.toml  README.md
paseto-v4-sodium/: Cargo.toml  README.md
paseto-v4-sodium/src/: lib.rs
paseto-v4-sodium/src/core/: local.rs  mod.rs  pie_wrap.rs  pke.rs  public.rs  pw_wrap.rs
paseto-v4-sodium/tests/: paserk.rs  paseto.rs
paseto-v4/src/: lib.rs
paseto-v4/src/core/: local.rs  mod.rs  pie_wrap.rs  pke.rs  public.rs  pw_wrap.rs
paseto-v4/tests/: paserk.rs  paseto.rs
paseto-v4/tests/vectors/: k4.sid.json
