[workspace]
members = [
    "paseto-core",
    "paseto-json",
    "paseto-v3",
    "paseto-v3-aws-lc",
    "paseto-v4",
    "paseto-v4-sodium",
    "paseto-test",
]
resolver = "3"

[workspace.dependencies]
paseto-core = { path = "paseto-core", version = "0.1.0-rc.3" }
paseto-json = { path = "paseto-json", version = "0.1.0-rc.3" }
paseto-v3 = { path = "paseto-v3", version = "0.1.0-rc.3" }
paseto-v3-aws-lc = { path = "paseto-v3-aws-lc", version = "0.1.0-rc.3" }
paseto-v4 = { path = "paseto-v4", version = "0.1.0-rc.3" }
paseto-v4-sodium = { path = "paseto-v4-sodium", version = "0.1.0-rc.3" }

[profile.dev.package."*"]
opt-level = 2
debug = false
incremental = false

[profile.release]
debug = 1
