[package]
name = "paseto-bench"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
criterion = "0.7.0"

paseto-core.workspace = true
paseto-json.workspace = true
paseto-v3.workspace = true
paseto-v3-aws-lc.workspace = true
paseto-v4.workspace = true
paseto-v4-sodium.workspace = true

rusty_paseto = "0.7"
pasetors = "0.7"

hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jiff = { version = "0.2", features = ["serde"] }

[[bench]]
name = "paseto_v4_local"
harness = false

[[bench]]
name = "paseto_v4_public"
harness = false
