[package]
name = "paseto-v3-aws-lc"
version = "0.1.0-rc.7"
edition = "2024"
authors = ["Conrad Ludgate <conradludgate@gmail.com>"]
repository = "https://github.com/conradludgate/paseto-rs"
description = "PASETO/PASERK V3 based on AWS-LC"
license = "Apache-2.0"
keywords = ["paseto", "paserk", "token", "security"]
categories = [
  "cryptography",
  "authentication",
  "encoding",
  "network-programming",
  "web-programming",
]

[features]
default = ["dep:aws-lc-sys"]
bindgen = ["aws-lc-sys?/bindgen", "aws-lc-fips-sys?/bindgen"]
asan = ["aws-lc-sys?/asan", "aws-lc-fips-sys?/asan"]
prebuilt-nasm = ["aws-lc-sys?/prebuilt-nasm"]

# require non-FIPS
non-fips = ["dep:aws-lc-sys", "aws-lc-rs/non-fips"]

# require FIPS
fips = ["dep:aws-lc-fips-sys", "aws-lc-rs/fips"]

[dependencies]
paseto-core.workspace = true

zerocopy = { version = "0.8", features = ["derive"] }

aws-lc-rs = "1.14"
aws-lc-sys = { version = "0.31", optional = true }
aws-lc-fips-sys = { version = "0.13", optional = true }

[dev-dependencies]
paseto-json.workspace = true
