[package]
name = "paseto-v3"
version = "0.1.0-rc.2"
edition = "2024"
authors = ["Conrad Ludgate <conradludgate@gmail.com>"]
repository = "https://github.com/conradludgate/paseto-rs"
description = "PASETO/PASERK V3 based on RustCrypto"
license = "Apache-2.0"
keywords = ["paseto", "paserk", "token", "security"]
categories = [
  "cryptography",
  "authentication",
  "encoding",
  "network-programming",
  "web-programming",
]

[dependencies]
paseto-core.workspace = true

generic-array = "0.14"
cipher = "0.4"
digest = { version = "0.10" }
rand = "0.9"

aes = { version = "0.8.2" }
ctr = { version = "0.9.2" }
hmac = { version = "0.12.1" }
sha2 = { version = "0.10.2" }
p384 = { version = "0.13.0" }
hkdf = { version = "0.12.3" }
pbkdf2 = { version = "0.12.1" }

[dev-dependencies]
paseto-json.workspace = true
rand = "0.9"
