[package]
name = "paseto-v3"
version = "0.1.0-rc.4"
edition = "2024"
authors = ["Conrad Ludgate <conradludgate@gmail.com>"]
repository = "https://github.com/conradludgate/paseto-rs"
description = "PASETO/PASERK V3 based on RustCrypto"
license = "Apache-2.0"
keywords = ["paseto", "paserk", "token", "security"]
categories = [
  "cryptography",
  "authentication",
  "encoding",
  "network-programming",
  "web-programming",
]

[dependencies]
paseto-core.workspace = true

generic-array = "0.14"
cipher = { version = "0.4", default-features = false }
digest = { version = "0.10", default-features = false }
getrandom = "0.3"

aes = { version = "0.8.2", default-features = false }
ctr = { version = "0.9.2", default-features = false }
hmac = { version = "0.12.1", default-features = false }
sha2 = { version = "0.10.2", default-features = false }
p384 = { version = "0.13.0", default-features = false, features = ["ecdsa", "ecdh"] }
hkdf = { version = "0.12.3", default-features = false }
# pbkdf2 = { version = "0.12.1", default-features = false }

[dev-dependencies]
paseto-json.workspace = true
