[package]
name = "paseto-v4-sodium"
version = "0.1.0-rc.1"
edition = "2024"
authors = ["Conrad Ludgate <conradludgate@gmail.com>"]
repository = "https://github.com/conradludgate/paseto-rs"
description = "PASETO/PASERK V4"
license = "Apache-2.0"
keywords = ["paseto", "paserk", "token", "security"]
categories = [
  "cryptography",
  "authentication",
  "encoding",
  "network-programming",
  "web-programming",
]

[dependencies]
paseto-core.workspace = true
libsodium-rs = "0.2"

[dev-dependencies]
paseto-json.workspace = true
rand = "0.9"

hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libtest-mimic = "0.8.1"

[[test]]
name = "paseto-test-vectors"
path = "tests/paseto.rs"
harness = false

[[test]]
name = "paserk-test-vectors"
path = "tests/paserk.rs"
harness = false
