[package]
name = "paseto-v4-sodium"
version = "0.1.0-rc.2"
edition = "2024"
authors = ["Conrad Ludgate <conradludgate@gmail.com>"]
repository = "https://github.com/conradludgate/paseto-rs"
description = "PASETO/PASERK V4 based on libsodium"
license = "Apache-2.0"
keywords = ["paseto", "paserk", "token", "security"]
categories = [
  "cryptography",
  "authentication",
  "encoding",
  "network-programming",
  "web-programming",
]

[dependencies]
paseto-core.workspace = true
libsodium-rs = "0.2"

[dev-dependencies]
paseto-json.workspace = true
rand = "0.9"
hex = "0.4"
