[package]
name = "paseto-v4"
version = "0.1.0"
edition = "2024"

[dependencies]
paseto-core.workspace = true

generic-array = "0.14"
cipher = "0.4.4"
digest = { version = "0.10.7", features = ["mac"] }
rand = "0.9"

chacha20 = { version = "0.9.1" }
blake2 = { version = "0.10.6" }
ed25519-dalek = { version = "2.0.0", features = ["hazmat"] }
curve25519-dalek = { version = "4.0.0" }
argon2 = { version = "0.5.0" }
sha2 = { version = "0.10" }

[dev-dependencies]
paseto-json.workspace = true

hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libtest-mimic = "0.8.1"

[[test]]
name = "paseto-test-vectors"
path = "tests/paseto.rs"
harness = false
