[package]
name = "paseto-v4"
version = "0.1.0-rc.1"
edition = "2024"
authors = ["Conrad Ludgate <conradludgate@gmail.com>"]
repository = "https://github.com/conradludgate/paseto-rs"
description = "PASETO/PASERK V4"
license = "Apache-2.0"
keywords = ["paseto", "paserk", "token", "security"]
categories = [
  "cryptography",
  "authentication",
  "encoding",
  "network-programming",
  "web-programming",
]

[dependencies]
paseto-core.workspace = true

generic-array = "0.14"
cipher = "0.4.4"
digest = { version = "0.10.7", features = ["mac"] }

chacha20 = { version = "0.9.1" }
blake2 = { version = "0.10.6" }
ed25519-dalek = { version = "2.0.0", features = ["hazmat"] }
curve25519-dalek = { version = "4.0.0" }
# argon2 = { version = "0.5.0" }
sha2 = { version = "0.10" }

[dev-dependencies]
paseto-json.workspace = true
rand = "0.9"
hex = "0.4"
