[package]
name = "paseto-v4"
version = "0.1.0-rc.4"
edition = "2024"
authors = ["Conrad Ludgate <conradludgate@gmail.com>"]
repository = "https://github.com/conradludgate/paseto-rs"
description = "PASETO/PASERK V4 based on RustCrypto"
license = "Apache-2.0"
keywords = ["paseto", "paserk", "token", "security"]
categories = [
  "cryptography",
  "authentication",
  "encoding",
  "network-programming",
  "web-programming",
]

[dependencies]
paseto-core.workspace = true

generic-array = "0.14"
cipher = "0.4.4"
digest = { version = "0.10.7", default-features = false }
getrandom = "0.3"

chacha20 = { version = "0.9.1", default-features = false }
blake2 = { version = "0.10.6", default-features = false }
ed25519-dalek = { version = "2.0.0", features = ["hazmat"], default-features = false }
curve25519-dalek = { version = "4.0.0", default-features = false }
# argon2 = { version = "0.5.0" }
sha2 = { version = "0.10", default-features = false }

[dev-dependencies]
paseto-json.workspace = true
hex = "0.4"
